--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-<script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+<script src="{{ site.url }}/js/vendor/imagesLoaded.js"></script>
 <script src="{{ site.url }}/js/helpers.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/shuffle.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/images.js" charset="utf-8"></script>
