implement hamburger menu

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <script src="{{ site.url }}/js/vendor/imagesLoaded.js"></script>
 <script src="{{ site.url }}/js/helpers.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/shuffle.js" charset="utf-8"></script>
+<script src="{{ site.url }}/js/menu.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/images.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/main.js" charset="utf-8"></script>
