--- a/_css/_custom.css
+++ b/_css/_custom.css
@@ -40,6 +40,10 @@ li {
   outline: none;
 }
 
+.t-3 {
+  transition-duration: 0.3s!important;
+}
+
 .t-5 {
   transition-duration: 0.5s!important;
 }
