constrain menu width

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <div menu class="fixed left-0 top-0 tc t-3 all ease o-0 bg-black-80 w-100 h-100">
-  <ul>
+  <ul class="mw6 center">
     <ul class="mt5">
       {% for item in site.data.menu %}
         <a class="white pa3" href="{{ item.url }}" target="_blank">
