--- a/_css/_custom.css
+++ b/_css/_custom.css
@@ -52,6 +52,10 @@ li {
   transition-duration: 0.5s!important;
 }
 
+.t-10 {
+  transition-duration: 1s!important;
+}
+
 .all {
   transition-property: all!important;
 }
