site text only appears on hover, menu items closer together

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
   <ul class="mw4 center">
     <ul class="mt5">
       {% for item in site.data.menu %}
-        <a class="white pv2 pv3-ns t-3 all ease hover-red db" href="{{ item.url }}" target="_blank">
+        <a class="white pb2 t-3 all ease hover-red db" href="{{ item.url }}" target="_blank">
           <li>{{ item.title }}</li>
         </a>
       {% endfor %}
@@ -10,7 +10,7 @@
 
     <ul class="mt4">
       {% for item in site.data.picturehouse-sites %}
-        <a class="white pv2 pv3-ns t-3 all ease hover-red db" href="{{ item.url }}" target="_blank">
+        <a class="white pb2 t-3 all ease hover-red db" href="{{ item.url }}" target="_blank">
           <li>{{ item.name }}</li>
         </a>
       {% endfor %}
