--- a/_includes/living-staff-overlay.html
+++ b/_includes/living-staff-overlay.html
@@ -1,3 +1,3 @@
 <div logo-container class="flex items-center justify-center bg-black-70 fixed w-100 h-100 no-pointer-events z-3">
-  <img logo src="{{ site.url }}/img/living-staff.png" alt="" class="w-50 w-25-m o-0 t-5 all ease" />
+  <img logo src="{{ site.url }}/img/living-staff.svg" alt="" class="w-50 w-25-m o-0 t-5 all ease" />
 </div>
