--- a/_css/_custom.css
+++ b/_css/_custom.css
@@ -74,3 +74,9 @@ li {
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+@media (--breakpoint-not-small) {
+  .w6-ns {
+    width: var(--width-6);
+  }
+}
