--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,5 +2,6 @@
 <script src="{{ site.url }}/js/helpers.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/shuffle.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/menu.js" charset="utf-8"></script>
+<script src="{{ site.url }}/js/info.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/images.js" charset="utf-8"></script>
 <script src="{{ site.url }}/js/main.js" charset="utf-8"></script>
