--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<div menu class="fixed right-0 top-0 tl t-3 all ease o-0 bg-black-80 w6-ns w5 h-100">
+<div menu class="fixed right-0 top-0 tl t-3 all ease o-0 bg-black-80 w5 h-100">
   <ul class="mw4 center">
     <ul class="mt5">
       {% for item in site.data.menu %}
