--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,5 +1,5 @@
 <h3 info-button class="fixed left-0 top-0 pa4 pointer ma0 white z-5">INFO</h3>
-<div info open='false' class="fixed w-100 h-100 bg-black-80 white o-0 t-3 ease all overflow-y-scroll" style="-webkit-overflow-scrolling: touch">
+<div info open='false' class="fixed w-100 h-100 bg-black-80 white o-0 t-3 ease all overflow-y-scroll">
   <div class="pa4 mt5 mw7 center tj">
     {% for text in site.data.info %}
       {% if text.list %}
